--- a/less/blocks/services.less
+++ b/less/blocks/services.less
@@ -65,6 +65,12 @@
   width: 450px;
 }
 
+.services__check1:focus ~ .services__controls label[for="radio1"],
+.services__check2:focus ~ .services__controls label[for="radio2"],
+.services__check3:focus ~ .services__controls label[for="radio3"]{
+  outline: 2px solid #5B9DD9;
+}
+
 .services__check1:checked ~ .services__slides .services__slides-inner{
   transform: translate(0);
 }
