--- a/less/variables.less
+++ b/less/variables.less
@@ -4,6 +4,7 @@
 @black:        #000;
 @black-60:     rgba(0, 0, 0, 0.6);
 @black-30:     rgba(0, 0, 0, 0.3);
+@black-20:     rgba(0, 0, 0, 0.2);
 @black-10:     rgba(0, 0, 0, 0.1);
 @yellow:       #f0c52e;
 @yellow-50:    rgba(240, 197, 46, 0.5);
