--- a/less/blocks/filter.less
+++ b/less/blocks/filter.less
@@ -160,7 +160,7 @@
 #check_white:focus + label,
 #check_blue:focus + label,
 #check_red:focus + label,
-#check_pink:focus + label,{
+#check_pink:focus + label{
    outline: 2px solid #5B9DD9;
 }
 
