--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -1,15 +1,16 @@
 .footer{
+  width: 100%;
   min-height: 205px;
   padding-top: 55px;
   padding-bottom: 60px;
-  background-color: @gray-dark;
-  color: @white;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  background-color: @gray-dark;
+  color: @white;
 }
 
-.footer__inner{
+.footer__block{
   .inner();
   display: flex;
   justify-content: space-between;
