--- a/css/style.css
+++ b/css/style.css
@@ -421,6 +421,10 @@ body {
   color: #000;
   background-color: #fff;
 }
+body {
+  width: 100%;
+  min-width: 1200px;
+}
 img {
   max-width: 100%;
   height: auto;
@@ -1313,11 +1317,10 @@ img {
   background: url("../img/map.jpg");
 }
 .footer {
+  width: 100%;
   min-height: 205px;
   padding-top: 55px;
   padding-bottom: 60px;
-  background-color: #464646;
-  color: #fff;
   display: -webkit-box;
   display: flex;
   -webkit-box-orient: vertical;
@@ -1325,8 +1328,10 @@ img {
           flex-direction: column;
   -webkit-box-pack: start;
           justify-content: flex-start;
+  background-color: #464646;
+  color: #fff;
 }
-.footer__inner {
+.footer__block {
   box-sizing: border-box;
   width: 1200px;
   padding: 0 20px;
@@ -1339,17 +1344,17 @@ img {
           align-items: flex-start;
   margin-bottom: 18px;
 }
-.footer__inner:nth-child(2) {
+.footer__block:nth-child(2) {
   margin-bottom: 40px;
 }
-.footer__inner:last-child {
+.footer__block:last-child {
   position: relative;
   margin-top: auto;
   margin-bottom: 0;
   -webkit-box-align: center;
           align-items: center;
 }
-.footer__inner:last-child::after {
+.footer__block:last-child::after {
   content: "";
   position: absolute;
   left: 20px;
