--- a/less/general/general.less
+++ b/less/general/general.less
@@ -6,6 +6,11 @@ body{
   background-color: @white;
 }
 
+body{
+  width: 100%;
+  min-width: 1200px;
+}
+
 img{
   max-width: 100%;
   height: auto;
