--- a/less/blocks/filter.less
+++ b/less/blocks/filter.less
@@ -161,7 +161,7 @@
 #check_blue:focus + label,
 #check_red:focus + label,
 #check_pink:focus + label{
-   outline: 2px solid #5B9DD9;
+  opacity: 0.6;
 }
 
 
@@ -233,7 +233,7 @@
 
 #check_yes:focus + label,
 #check_no:focus + label{
-   outline: 2px solid #5B9DD9;
+  opacity: 0.6;
 }
 
 #check_yes:checked + label::after,
