--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -44,6 +44,10 @@
   &--sub{
     padding-right: 27px;
 
+    &:focus + .sub-nav{
+      display: flex;
+    }
+
     &::before,
     &::after{
       content: "";
