--- a/less/blocks/product-card.less
+++ b/less/blocks/product-card.less
@@ -30,6 +30,13 @@
   }
 }
 
+.product-card__image{
+  display: block;
+  width: 360px;
+  height: 380px;
+  background-color: #efefef;
+}
+
 .product-card__info{
   display: flex;
   justify-content: space-between;
