--- a/less/blocks/feedback.less
+++ b/less/blocks/feedback.less
@@ -12,6 +12,7 @@
   background-color: @white;
   color: @black;
   box-shadow: 0px 10px 20px 0px rgba(4, 6, 6, 0.2);
+  animation: modal 0.6s;
 
   &--show{
     display: block;
