--- a/less/blocks/info-block.less
+++ b/less/blocks/info-block.less
@@ -77,5 +77,5 @@
   height: 222px;
   margin-top: 24px;
   margin-bottom: 65px;
-  background: url("../img/map.jpg");
+  background: #efefef url("../img/map.jpg");
 }
