--- a/less/blocks/modal-map.less
+++ b/less/blocks/modal-map.less
@@ -8,8 +8,9 @@
   box-sizing: border-box;
   width: 960px;
   min-height: 559px;
-  background: url("../img/map-big.jpg");
+  background: #efefef url("../img/map-big.jpg");
   box-shadow: 0px 10px 20px 0px rgba(4, 6, 6, 0.2);
+  animation: modal 0.6s;
 
   &--show{
     display: block;
