--- a/less/blocks/slider.less
+++ b/less/blocks/slider.less
@@ -137,8 +137,9 @@
 
 .slider__control{
   position: relative;
-  height: 10px;
-  width: 10px;
+  box-sizing: border-box;
+  height: 12px;
+  width: 12px;
   text-indent: 100%;
   overflow: hidden;
   border: 1px solid @black;
@@ -163,7 +164,7 @@
 .slider__check1:focus ~ .slider__controls label[for="check1"],
 .slider__check2:focus ~ .slider__controls label[for="check2"],
 .slider__check3:focus ~ .slider__controls label[for="check3"]{
-   outline: 2px solid #5B9DD9;
+  border: 2px solid @black;
 }
 // меняем вид соотв контрола в зависимости от состояния радио-кнопки
 .slider__check1:checked ~ .slider__controls label[for="check1"]::after,
