--- a/less/general/general.less
+++ b/less/general/general.less
@@ -15,3 +15,9 @@ img{
   max-width: 100%;
   height: auto;
 }
+
+@keyframes modal {
+  0% { transform: translateX(-3000px); }
+  70% { transform: translateX(30px); }
+  100% { transform: translateX(0); }
+}
