--- a/less/general/general.less
+++ b/less/general/general.less
@@ -21,3 +21,17 @@ img{
   70% { transform: translateX(30px); }
   100% { transform: translateX(0); }
 }
+
+@keyframes shake {
+  from, to {
+    transform: translate3d(0, 0, 0);
+  }
+
+  10%, 30%, 50%, 70%, 90% {
+    transform: translate3d(-10px, 0, 0);
+  }
+
+  20%, 40%, 60%, 80% {
+    transform: translate3d(10px, 0, 0);
+  }
+}
