--- a/less/style.less
+++ b/less/style.less
@@ -28,3 +28,4 @@
 @import "blocks/sort.less";
 @import "blocks/product-card.less";
 @import "blocks/pagination.less";
+@import "blocks/modal-error.less";
