--- a/css/style.css
+++ b/css/style.css
@@ -995,12 +995,11 @@ img {
   z-index: 1;
   display: inline-block;
   box-sizing: border-box;
-  min-width: 220px;
-  max-width: 380px;
-  height: 40px;
+  width: 220px;
   padding: 10px;
   font-family: "Gilroy", "Verdana", sans-serif;
   font-size: 18px;
+  line-height: 20px;
   font-weight: 800;
   color: #000;
   text-transform: uppercase;
@@ -1015,18 +1014,17 @@ img {
   content: "";
   position: absolute;
   z-index: -1;
-  top: 50%;
-  margin-top: -4px;
+  top: 40%;
   left: 0;
   width: 100%;
-  height: 8px;
+  height: 20%;
   background-color: #f0c52e;
   transition: all 0.3s ease;
 }
 .button:hover::after,
 .button:focus::after {
-  height: 40px;
-  margin-top: -20px;
+  height: 100%;
+  top: 0;
 }
 .button:active {
   color: rgba(0, 0, 0, 0.3);
@@ -1036,8 +1034,7 @@ img {
   margin-bottom: 51px;
 }
 .button--services {
-  min-width: 160px;
-  max-width: 280px;
+  width: 160px;
 }
 .button--services:active {
   color: #f7e184;
@@ -1047,17 +1044,16 @@ img {
 }
 .button--info {
   margin-top: auto;
-  min-width: 260px;
-  max-width: 500px;
+  width: 260px;
 }
 .button--feedback {
-  min-width: 200px;
+  width: 200px;
 }
 .button--filter {
-  min-width: 200px;
+  width: 200px;
 }
 .button--catalog {
-  min-width: 200px;
+  width: 200px;
   margin-bottom: 5px;
 }
 .main-content {
