--- a/less/blocks/button.less
+++ b/less/blocks/button.less
@@ -3,12 +3,11 @@
   z-index: 1;
   display: inline-block;
   box-sizing: border-box;
-  min-width: 220px;
-  max-width: 380px;
-  height: 40px;
+  width: 220px;
   padding: 10px;
   font-family: @font-gilroy;
   font-size: @font-size-link;
+  line-height: 20px;
   font-weight: @extrabold;
   color: @black;
   text-transform: uppercase;
@@ -23,19 +22,18 @@
     content: "";
     position: absolute;
     z-index: -1;
-    top: 50%;
-    margin-top: -4px;
+    top: 40%;
     left: 0;
     width: 100%;
-    height: 8px;
+    height: 20%;
     background-color: @yellow;
     transition: all 0.3s ease;
   }
 
   &:hover::after,
   &:focus::after{
-    height: 40px;
-    margin-top: -20px;
+    height: 100%;
+    top: 0;
   }
 
   &:active{
@@ -48,8 +46,7 @@
   }
 
   &--services{
-    min-width: 160px;
-    max-width: 280px;
+    width: 160px;
 
     &:active{
       color: @yellow-text;
@@ -62,20 +59,19 @@
 
   &--info{
     margin-top: auto;
-    min-width: 260px;
-    max-width: 500px;
+    width: 260px;
   }
 
   &--feedback{
-    min-width: 200px;
+    width: 200px;
   }
 
   &--filter{
-    min-width: 200px;
+    width: 200px;
   }
 
   &--catalog{
-    min-width: 200px;
+    width: 200px;
     margin-bottom: 5px;
   }
 }
