--- a/less/blocks/filter.less
+++ b/less/blocks/filter.less
@@ -95,6 +95,14 @@
     border-width: 10px;
     margin-top: -12px;
   }
+
+  &--min{
+    left: -5px;
+  }
+
+  &--max{
+    left: 110px;
+  }
 }
 
 .filter__label{
