--- a/less/style.less
+++ b/less/style.less
@@ -29,3 +29,4 @@
 @import "blocks/product-card.less";
 @import "blocks/pagination.less";
 @import "blocks/modal-error.less";
+@import "blocks/modal-show.less";
