--- a/css/style.css
+++ b/css/style.css
@@ -994,6 +994,7 @@ img {
   position: relative;
   z-index: 1;
   display: inline-block;
+  vertical-align: middle;
   box-sizing: border-box;
   width: 220px;
   padding: 10px;
@@ -1562,6 +1563,7 @@ img {
   fill: #fff;
 }
 .feedback {
+  display: none;
   position: fixed;
   z-index: 100;
   top: 50%;
@@ -1577,9 +1579,6 @@ img {
   box-shadow: 0px 10px 20px 0px rgba(4, 6, 6, 0.2);
   -webkit-animation: modal 0.6s;
           animation: modal 0.6s;
-}
-.feedback--show {
-  display: block;
 }
 .feedback__form {
   display: -webkit-box;
@@ -1686,6 +1685,7 @@ img {
   background-color: rgba(240, 197, 46, 0.3);
 }
 .modal-map {
+  display: none;
   position: fixed;
   z-index: 100;
   top: 50%;
@@ -1699,9 +1699,6 @@ img {
   box-shadow: 0px 10px 20px 0px rgba(4, 6, 6, 0.2);
   -webkit-animation: modal 0.6s;
           animation: modal 0.6s;
-}
-.modal-map--show {
-  display: block;
 }
 .visually-hidden {
   position: absolute;
@@ -1835,6 +1832,12 @@ img {
 .filter__control:active {
   border-width: 10px;
   margin-top: -12px;
+}
+.filter__control--min {
+  left: -5px;
+}
+.filter__control--max {
+  left: 110px;
 }
 .filter__label {
   width: 88px;
@@ -2226,4 +2229,7 @@ img {
 .modal-error {
   -webkit-animation: shake 0.6s;
           animation: shake 0.6s;
+}
+.modal-show {
+  display: block;
 }
