--- a/less/blocks/button.less
+++ b/less/blocks/button.less
@@ -2,6 +2,7 @@
   position: relative;
   z-index: 1;
   display: inline-block;
+  vertical-align: middle;
   box-sizing: border-box;
   width: 220px;
   padding: 10px;
