--- a/less/blocks/feedback.less
+++ b/less/blocks/feedback.less
@@ -1,4 +1,5 @@
 .feedback{
+  display: none;
   position: fixed;
   z-index: 100;
   top: 50%;
@@ -13,10 +14,6 @@
   color: @black;
   box-shadow: 0px 10px 20px 0px rgba(4, 6, 6, 0.2);
   animation: modal 0.6s;
-
-  &--show{
-    display: block;
-  }
 }
 
 .feedback__form{
