--- a/less/blocks/modal-map.less
+++ b/less/blocks/modal-map.less
@@ -1,4 +1,5 @@
 .modal-map{
+  display: none;
   position: fixed;
   z-index: 100;
   top: 50%;
@@ -11,8 +12,4 @@
   background: #efefef url("../img/map-big.jpg");
   box-shadow: 0px 10px 20px 0px rgba(4, 6, 6, 0.2);
   animation: modal 0.6s;
-
-  &--show{
-    display: block;
-  }
 }
